organization by folders, finished translations

--- a/pages/curriculo.html
+++ b/pages/curriculo.html
@@ -1,25 +1,25 @@
 <!-- Com o "atalho" html:5, o vscode já preenche com uma estrutura base -->
 <!DOCTYPE html>
-<html lang="pt">
+<html lang=pt-br">
 
 <head>
   <meta charset="UTF-8"> <!-- Define a codificação de caracteres da pagina -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samuel Canuto Sales</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&family=Raleway&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css"> <!-- Tag para importar o css para a página (link:css) -->
+  <link rel="stylesheet" href="../css/style.css"> <!-- Tag para importar o css para a página (link:css) -->
 </head>
 
 <body>
 
   <div class="container">
     <div class="profile">
-      <img src="Samuel.jpg" alt="Foto de Samuel Canuto" id="fotoPrincipal">
+      <img src="../img/Samuel.jpg" alt="Foto de Samuel Canuto" id="fotoPrincipal">
       <!--
                 * Tag para inserção de imagens, sendo "src" a origem da imagem.
                 * "alt" é um texto alternaivo caso a imagem não possa ser carregada. Também é muito útil no quesito acessibilidade, pois deficientes visuais utilizam leitores de tela, além de ser utilizado pelos dispositivos de busca. 
@@ -29,15 +29,15 @@
       <h2>Universitário | Dev</h2>
 
       <a href="http://linkedin.com/in/samuel-canuto-sales-b88a2a239/" target="_blank" class="social-links">
-        <img src="logo-linkedin.png" alt="Linkedin" class="social-icons">
+        <img src="../img/logo-linkedin.png" alt="Linkedin" class="social-icons">
       </a>
 
       <a href="http://github.com/ImCanuto" target="_blank" class="social-links">
-        <img src="logo-github.png" alt="Github" class="social-icons github">
+        <img src="../img/logo-github.png" alt="Github" class="social-icons github">
       </a>
 
       <a href="http://Instagram.com/_samuelcanuto" target="_blank" class="social-links">
-        <img src="logo-instagram.png" alt="Instagram" class="social-icons">
+        <img src="../img/logo-instagram.png" alt="Instagram" class="social-icons">
       </a>
       <!-- 
                 * Tag "âncora", para referenciar links. Sendo "href" a refeência a Hiperlink.
@@ -46,10 +46,9 @@
     </div>
 
     <p>
-      Graduando de de Sistemas de Informação pela Universidade Tecnológica Federal do Paraná e ex CEO da Odin Stock,
+      Graduando em Sistemas de Informação pela Universidade Tecnológica Federal do Paraná e ex CEO da Odin Stock,
       empresa especializada em intermediação de produtos internacionais. Tenho experiência em lidar com pessoas,
-      dedicação
-      para solucionar problemas e facilidade em aprender coisas novas.
+      dedicação para solucionar problemas e facilidade em aprender coisas novas.
       <!-- 
                 * Tag "b" (bold),  deixa o texto em negrito e tem um valor apenas visual.
                 * Também poderia ter usado a tag "strong" , que tem o mesmo efeito, porém, semanticamente, quer dizer que o texto dentro da tag é algo "forte"/importante.
@@ -71,7 +70,7 @@
       <li><b>CSS |</b> Avançado</li>
       <li><b>C |</b> Básico</li>
       <li><b>Ptyhon |</b> Básico</li>
-
+      <li><b>Java |</b> Básico</li>
     </ul>
 
     <h3>Formação</h3>
