--- a/curriculum.html
+++ b/curriculum.html
@@ -18,6 +18,11 @@
 <body>
 
     <div class="container">
+        <div class="languageBox">
+            <a class="languageButton" href="/index.html">Mudar para Português
+                <img class="brIcon" src="./img/brasil.png" alt="">
+            </a>
+        </div>
         <div class="profile">
             <img src="../img/Samuel.jpg" alt="Foto de Samuel Canuto" id="fotoPrincipal">
             <!--
