--- a/curriculum.html
+++ b/curriculum.html
@@ -74,6 +74,7 @@
         <ul>
             <li><b>HTML |</b> Advanced</li>
             <li><b>CSS |</b> Advanced</li>
+            <li><b>GIT |</b> Intermediary</li>
             <li><b>C |</b> Basic</li>
             <li><b>Ptyhon |</b> Basic</li>
             <li><b>Java |</b> Basic</li>
