--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <ul>
       <li><b>HTML |</b> Avançado</li>
       <li><b>CSS |</b> Avançado</li>
+      <li><b>GIT |</b> Intermediário</li>
       <li><b>C |</b> Básico</li>
       <li><b>Ptyhon |</b> Básico</li>
       <li><b>Java |</b> Básico</li>
