--- a/curriculum.html
+++ b/curriculum.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="languageBox">
             <a class="languageButton" href="/index.html">Mudar para Português
-                <img class="brIcon" src="./img/brasil.png" alt="">
+                <img class="languageIcon" src="./img/brasil.png" alt="">
             </a>
         </div>
         <div class="profile">
