--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="languageBox">
       <a class="languageButton" href="/curriculum.html">Change to English
-        <img class="euaIcon" src="./img/estados-unidos.png" alt="">
+        <img class="languageIcon" src="./img/estados-unidos.png" alt="">
       </a>
     </div>
     <div class="profile">
