removes Instagram button and add `Mail` button

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <h2>Universitário | Dev</h2>
 
       <a href="http://linkedin.com/in/samuel-canuto-sales-b88a2a239/" target="_blank" class="social-links">
-        <img src="../img/logo-linkedin.png" alt="Linkedin" class="social-icons">
+        <img src="./img/logo-linkedin.png" alt="Linkedin" class="social-icons">
       </a>
 
       <a href="http://github.com/ImCanuto" target="_blank" class="social-links">
-        <img src="../img/logo-github.png" alt="Github" class="social-icons github">
+        <img src="./img/logo-github.png" alt="Github" class="social-icons github">
       </a>
 
-      <a href="http://Instagram.com/_samuelcanuto" target="_blank" class="social-links">
-        <img src="../img/logo-instagram.png" alt="Instagram" class="social-icons">
+      <a href="mailto:samuel.canuto@yahoo.com" target="_blank" class="social-links">
+        <img src="./img/logo-mail.png" alt="E-mail" class="social-icons">
       </a>
       <!-- 
                 * Tag "âncora", para referenciar links. Sendo "href" a refeência a Hiperlink.
