--- a/curriculum.html
+++ b/curriculum.html
@@ -41,8 +41,8 @@
                 <img src="../img/logo-github.png" alt="Github" class="social-icons github">
             </a>
 
-            <a href="http://Instagram.com/_samuelcanuto" target="_blank" class="social-links">
-                <img src="../img/logo-instagram.png" alt="Instagram" class="social-icons">
+            <a href="mailto:samuel.canuto@yahoo.com" target="_blank" class="social-links">
+                <img src="./img/logo-mail.png" alt="E-mail" class="social-icons">
             </a>
             <!-- 
                 * Tag "âncora", para referenciar links. Sendo "href" a refeência a Hiperlink.
