--- a/curriculum.html
+++ b/curriculum.html
@@ -75,9 +75,9 @@
             <li><b>HTML |</b> Advanced</li>
             <li><b>CSS |</b> Advanced</li>
             <li><b>GIT |</b> Intermediary</li>
-            <li><b>C |</b> Basic</li>
+            <li><b>Java |</b> Intermediary</li>
+            <li><b>C |</b> Intermediary</li>
             <li><b>Ptyhon |</b> Basic</li>
-            <li><b>Java |</b> Basic</li>
         </ul>
 
         <h3>Education</h3>
