--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
       <li><b>HTML |</b> Avançado</li>
       <li><b>CSS |</b> Avançado</li>
       <li><b>Java |</b> Intermediário</li>
-      <li><b>C |</b> Intermediário</li>
       <li><b>GIT |</b> Intermediário</li>
+      <li><b>JavaScript |</b> Básico</li>
+      <li><b>C |</b> Básico</li>
       <li><b>Ptyhon |</b> Básico</li>
     </ul>
 
