change linkedin url

--- a/curriculum.html
+++ b/curriculum.html
@@ -33,7 +33,7 @@
             <h1>Samuel Canuto Sales</h1>
             <h2>University Student | Dev</h2>
 
-            <a href="http://linkedin.com/in/samuel-canuto-sales-b88a2a239/" target="_blank" class="social-links">
+            <a href="http://linkedin.com/in/samuel-canuto" target="_blank" class="social-links">
                 <img src="../img/logo-linkedin.png" alt="Linkedin" class="social-icons">
             </a>
 
